[package]
name = "blanko_quaternions"
version = "0.1.1"
edition = "2024"
authors = ["blankopapier"]
description = "My personal library for (dual) quaternions and complex/dual numbers."
license = "MIT"
repository = "https://github.com/blankopapier/blanko_quaternions"

[lib]
name = "blanko_quaternions"
path = "src/lib.rs"

[features]
angle_new_degrees = []

[[bin]]
name = "tests"
path = "src/tests.rs"

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["full"] }
auto_ops = { version = "0.3.0" }
